--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,14 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragment.SearchFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!-- Background Image -->
+    <ImageView
+        android:id="@+id/backgroundImageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="search" />
+        android:layout_height="0dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/design"
+        app:layout_constraintBottom_toTopOf="@+id/searchContainer"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <!-- Container for search components -->
+    <LinearLayout
+        android:id="@+id/searchContainer"
+        android:layout_width="385dp"
+        android:layout_height="544dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="vertical"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <!-- Title TextView -->
+        <TextView
+            android:id="@+id/titleTextView"
+            android:layout_width="328dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:text='"Your Next Adventure Begins Here – Search for Rides!"'
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_green_light"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <!-- EditText for Leaving From -->
+        <EditText
+            android:id="@+id/leavingFromEditText"
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:hint="Leaving From"
+            android:inputType="text" />
+
+        <!-- EditText for Going To -->
+        <EditText
+            android:id="@+id/goingToEditText"
+            android:layout_width="397dp"
+            android:layout_height="74dp"
+            android:hint="Going To"
+            android:inputType="text" />
+
+        <!-- EditText for Date -->
+        <EditText
+            android:id="@+id/dateEditText"
+            android:layout_width="397dp"
+            android:layout_height="78dp"
+            android:hint="Today"
+            android:inputType="date" />
+
+        <!-- EditText for Number of Users -->
+        <EditText
+            android:id="@+id/numberOfUsersEditText"
+            android:layout_width="match_parent"
+            android:layout_height="86dp"
+            android:hint="Number of Users"
+            android:inputType="number" />
+
+        <!-- Search Button -->
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/searchButton"
+            android:layout_width="235dp"
+            android:layout_height="85dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/newgreenbuttongradient"
+            android:text="Search" />
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
