--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
         android:layout_width="325dp"
         android:layout_height="57dp"
         android:background="@drawable/edittext"
-        android:drawableLeft="@drawable/emaillogo__1_"
+        android:drawableLeft="@drawable/emaillogo_1"
         android:drawablePadding="15dp"
         android:elevation="5dp"
         android:ems="10"
